k8s/redpower-lp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpower-lp-service
  namespace: marketing
  labels:
    app: redpower-lp
spec:
  selector:
    app: redpower-lp
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
